# ruphi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/backend/codegen/: generate_ir.hpp  ir_context.hpp  ir_utils.hpp
include/backend/runtime/: nv_runtime.h  prototypes.h  rph_runtime.h
include/frontend/: module_manager.hpp
include/frontend/ast/: ast.hpp  program.hpp  types.hpp
include/frontend/ast/expressions/: access_expr_node.hpp  array_expr_node.hpp  assignment_expr_node.hpp  binary_expr_node.hpp  boolean_literal_node.hpp  call_expr_node.hpp  conditional_expr_node.hpp  decrement_expr_node.hpp  identifier_node.hpp  increment_expr_node.hpp  key_value_node.hpp  list_comp_node.hpp  logical_not_expr_node.hpp  map_node.hpp  member_expr_node.hpp  numeric_literal_node.hpp  param_node.hpp  post_decrement_expr_node.hpp  post_increment_expr_node.hpp  range_expr_node.hpp  string_literal_node.hpp  tuple_expr_node.hpp  unary_minus_expr_node.hpp  vector_expr_node.hpp
include/frontend/ast/statements/: break_stmt_node.hpp  continue_stmt_node.hpp  declaration_stmt_node.hpp  def_stmt_node.hpp  for_stmt_node.hpp  if_statement_node.hpp  import_stmt_node.hpp  label_stmt_node.hpp  loop_stmt_node.hpp  match_stmt_node.hpp  return_stmt_node.hpp  while_stmt_node.hpp
include/frontend/checker/: builtins.hpp  checker.hpp  checker_meth.hpp  namespace.hpp  type.hpp  unification.hpp
include/frontend/checker/expressions/: check_access_expr.hpp  check_array_expr.hpp  check_assignment_expr.hpp  check_binary_expr.hpp  check_call_expr.hpp  check_conditional_expr.hpp  check_list_comp_expr.hpp  check_map_expr.hpp  check_member_expr.hpp  check_primary_expr.hpp  check_range_expr.hpp  check_tuple_expr.hpp  check_unary_expr.hpp  check_vector_expr.hpp
include/frontend/interactive/: epoch_system.hpp  execution_unit.hpp  fragment_parser.hpp  incremental_checker.hpp  incremental_ir_builder.hpp  incremental_semantic_analyzer.hpp  interactive_orchestrator.hpp  interactive_session.hpp  ir_incremental_builder.hpp  jit_engine.hpp  jit_execution_engine.hpp  session_manager.hpp  symbol_collector.hpp
include/frontend/lexer/: identifier_tokenizer.hpp  lexer.hpp  number_tokenizer.hpp  operator_tokenizer.hpp  string_tokenizer.hpp  token.hpp
include/frontend/parser/: parser.hpp
include/frontend/parser/expressions/: parse_args.hpp  (+24 more)
lib/: CMakeLists.txt  read.ll
lib/networking/: json_load.c
src/: main.cpp
src/backend/codegen/: CMakeLists.txt  generate_ir.cpp  generator.test.cpp  ir_context.cpp  ir_utils.cpp
src/backend/codegen/expressions/: generate_access_expr.cpp  generate_array_expr.cpp  generate_assignment_expr.cpp  generate_binary_expr.cpp  generate_boolean_literal.cpp  generate_call_expr.cpp  generate_conditional_expr.cpp  generate_decrement.cpp  generate_identifier.cpp  generate_increment.cpp  generate_key_value_node.cpp  generate_list_comp_expr.cpp  generate_logical_not.cpp  generate_map.cpp  generate_member_expr.cpp  generate_numeric_literal.cpp  generate_param_node.cpp  generate_post_decrement.cpp  generate_post_increment.cpp  generate_range_expr.cpp  generate_string_literal.cpp  generate_tuple_expr.cpp  generate_unary_minus.cpp  generate_vector.cpp
src/backend/codegen/statements/: generate_break_stmt.cpp  generate_continue_stmt.cpp  generate_declaration_stmt.cpp  generate_def_stmt.cpp  generate_for_stmt.cpp  generate_if_stmt.cpp  generate_import_stmt.cpp  generate_label_stmt.cpp  generate_loop_stmt.cpp  generate_match_stmt.cpp  generate_return_stmt.cpp  generate_while_stmt.cpp
src/backend/runtime/: CMakeLists.txt  nv_runtime.c  print.c  prototypes.c  rph_runtime.c  type_registry.c  value_utils.c
src/backend/runtime/types/: any.c  array.c  bool.c  custom.c  float.c  int.c  json.c  map.c  record.c  str.c  tuple.c  vector.c
src/frontend/: module_manager.cpp
src/frontend/checker/: CMakeLists.txt  builtins.cpp  checker.cpp  checker.test.cpp  checker_meth.cpp  namespace.cpp  type.cpp
src/frontend/checker/expressions/: check_access_expr.cpp  check_array_expr.cpp  check_assignment_expr.cpp  check_binary_expr.cpp  check_call_expr.cpp  check_conditional_expr.cpp  check_list_comp_expr.cpp  check_map_expr.cpp  check_member_expr.cpp  check_primary_expr.cpp  check_range_expr.cpp  check_tuple_expr.cpp  check_unary_expr.cpp  check_vector_expr.cpp
src/frontend/checker/statements/: check_decl_stmt.cpp  check_def_stmt.cpp  check_for_stmt.cpp  check_if_stmt.cpp  check_import_stmt.cpp  check_loop_stmt.cpp  check_match_stmt.cpp  check_program.cpp  check_return_stmt.cpp  check_while_stmt.cpp
src/frontend/interactive/: CMakeLists.txt  epoch_system.cpp  execution_unit.cpp  fragment_parser.cpp  incremental_checker.cpp  incremental_ir_builder.cpp  incremental_semantic_analyzer.cpp  interactive_orchestrator.cpp  interactive_session.cpp  interactive_session_impl.cpp  ir_incremental_builder.cpp  jit_engine.cpp  jit_execution_engine.cpp  session_manager.cpp  symbol_collector.cpp
src/frontend/lexer/: CMakeLists.txt  identifier_tokenizer.cpp  lexer.cpp  lexer.test.cpp  number_tokenizer.cpp  operator_tokenizer.cpp  string_tokenizer.cpp
src/frontend/parser/: CMakeLists.txt  parser.cpp  parser.test.cpp
src/frontend/parser/expressions/: parse_access_expr.cpp  parse_additive_expr.cpp  parse_args.cpp  parse_arguments_list.cpp  parse_array_map_expr.cpp  parse_assignment_expr.cpp  parse_boolean_literal.cpp  parse_call_expr.cpp  parse_call_member_expr.cpp  parse_conditional_expr.cpp  parse_equality_expr.cpp  parse_expr.cpp  parse_list_comp_expr.cpp  parse_logical_expr.cpp  parse_logical_not_expr.cpp  parse_member_expr.cpp  parse_multiplicative_expr.cpp  parse_postfix_expr.cpp  parse_power_expr.cpp  parse_primary_expr.cpp  parse_range_expr.cpp  parse_relational_expr.cpp  parse_type.cpp  parse_unary_expr.cpp  parse_vector_expr.cpp
src/frontend/parser/statements/: parse_break_stmt.cpp  parse_continue_stmt.cpp  parse_def_stmt.cpp  parse_for_stmt.cpp  parse_if_stmt.cpp  parse_label_stmt.cpp  parse_locked_stmt.cpp  parse_loop_stmt.cpp  parse_match_stmt.cpp  parse_return_stmt.cpp  parse_stmt.cpp  parse_while_stmt.cpp
(+22 files in other folders)
